# Homework_1

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
